# smart_mirror

./: .gitignore  README.md  called.txt  camera.py  config.config  example_fileread.py  img_log.txt  incrontab.txt  log.txt  main.py  main.py.save  main2.py  reboot.sh  requirements.txt  sensor.py  start_camera.sh  start_mirror.sh  startup.sh  uvc-radiometry.py  viewer.py
Kheirlb_purethermal_lib/: install.txt  thermal_test.py
dh22/: dh22setup.txt
dht22/: dht22temp.py
flir/: uvc-capture.py
pir_sensor/: .pir_test.py.swp  pir_test.py
purethermal_lib/: camera_over_tcp.py
rocket/: Cargo.toml  Rocket.toml  config.conf  mirror.conf
rocket/src/: cors.rs  main.rs
screen/: screen.py  sensor.py  test.py  video_try.py
screen/PAGE editor/: version1.tcl  version1.tcl.bak1  version1.tcl.bak2  version1.tcl.bak3
sensor/: main.py  sensor.py
static/: config_form.html  index.html  main.js  style.css
webform/: config_form.html  main.js  mock_response.json  style.css  toggle_switch.css
